--- a/script.css
+++ b/script.css
@@ -9,3 +9,25 @@ h1{
 body{
     background-color: #1c1c1c;
 }
+
+body{
+    padding: auto;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1c1c;
+    color: white;
+    font-size: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    font-size: 20px;
+    text-align: center;
+    line-height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
