--- a/script.css
+++ b/script.css
@@ -77,6 +77,15 @@ h1
   &__half--back .page__number
       left 1rem
 
+
+
+
+
+      i
+
+
+
+      
   &__half
     display flex
     align-items center
