--- a/css/new.css
+++ b/css/new.css
@@ -20,4 +20,11 @@ h4{
     color: rgba(120, 204, 38, 0.9);
 }
 
+body{
+    font: 100;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    padding: auto;
+}
 /* nothing to do here//
+
+b
